[BM-228] :sparkles: 키워드 검색 구현